FIX: scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -101,6 +101,15 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.infoTab::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.infoTab{
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
 
 .avatar-container .MuiAvatar-root {
   height: 220px;
